--- a/RunnerConfig.yaml
+++ b/RunnerConfig.yaml
@@ -1,15 +1,22 @@
 behaviors:
-  Runner:
+  Runner:  # Behavior Name이 "Runner"일 경우 동일하게 설정
     trainer_type: ppo
-    max_steps: 1000
-    reward_signal:
-      type: extrinsic
-      strength: 1.0
     hyperparameters:
       batch_size: 64
       buffer_size: 2048
       learning_rate: 0.0003
+      beta: 0.005
+      epsilon: 0.2
+      lambd: 0.95
+      num_epoch: 3
     network_settings:
+      normalize: true
       hidden_units: 128
       num_layers: 2
-    schedule: linear
+    reward_signals:
+      extrinsic:
+        gamma: 0.99
+        strength: 1.0
+    max_steps: 100000  # 학습 단계 최대치를 10,000으로 설정
+    time_horizon: 64
+    summary_freq: 1000
