--- a/RunnerConfig.yaml
+++ b/RunnerConfig.yaml
@@ -1,5 +1,5 @@
 behaviors:
-  Runner:  # Behavior Name이 "Runner"일 경우 동일하게 설정
+  Runner:  # Behavior Name
     trainer_type: ppo
     hyperparameters:
       batch_size: 64
@@ -17,6 +17,6 @@ behaviors:
       extrinsic:
         gamma: 0.99
         strength: 1.0
-    max_steps: 500000  # 학습 단계 최대치를 50,000으로 설정
+    max_steps: 1000000
     time_horizon: 64
     summary_freq: 1000
