--- a/RunnerConfig.yaml
+++ b/RunnerConfig.yaml
@@ -1,22 +1,22 @@
 behaviors:
-  Runner:  # Behavior Name
+  Runner:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 64
-      buffer_size: 2048
-      learning_rate: 0.0003
-      beta: 0.005
+      batch_size: 128         # Larger batches for better gradient estimates
+      buffer_size: 4096       # More data per training cycle
+      learning_rate: 0.0002   # Slightly lower for stability
+      beta: 0.01             # Encourage more exploration
       epsilon: 0.2
       lambd: 0.95
-      num_epoch: 3
+      num_epoch: 4           # More epochs for deeper updates
     network_settings:
       normalize: true
-      hidden_units: 128
+      hidden_units: 256      # Larger network for more complex policy
       num_layers: 2
     reward_signals:
       extrinsic:
         gamma: 0.99
         strength: 1.0
-    max_steps: 1000000
-    time_horizon: 64
-    summary_freq: 1000
+    max_steps: 100000
+    time_horizon: 128        # Longer trajectories for better long-term learning
+    summary_freq: 50        # More frequent logs for closer monitoring
