--- a/RunnerConfig.yaml
+++ b/RunnerConfig.yaml
@@ -17,6 +17,6 @@ behaviors:
       extrinsic:
         gamma: 0.99
         strength: 1.0
-    max_steps: 100000
+    max_steps: 1000000
     time_horizon: 128        # Longer trajectories for better long-term learning
-    summary_freq: 50        # More frequent logs for closer monitoring
+    summary_freq: 10000        # More frequent logs for closer monitoring
